--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -2066,10 +2066,135 @@ die folgenden Definitionen:
   natürlichen Quotientenabbildung identifiziert werden kann.
 \end{bemerk}
 
+\section{Fortsetzung beschränkter linearer Funktionale und
+  \textsc{Hahn}"~\textsc{Banach}"~Theorem}
 
+Die Prinzipien der Fortsetzung von beschränkten linearen Operatoren und
+Funktionalen haben grundlegende Bedeutung in der Funktionalanalysis.
 
+\begin{defini}
+  Seien $X,Y$ normierte Räume und $M\subseteq X$ ein linearer Teilraum. Ein
+  Operator $T\in\CL(X,Y)$ heißt genau dann \highl{Fortsetzung}von
+  $T_{0}\in\CL(X,Y)$ von $M$ auf $X$, wenn $T_{0}= T\cdot J_{M}$, wobei
+  $J_{M}(x)\coloneq x$ für $x\in M$.
+\end{defini}
+
+\begin{bemerk}
+  Manchmal schreibt man auch $T_{M}\coloneq J_{M}$.
+\end{bemerk}
+
+%satz II.4.1
+\begin{satz}
+  Sei $M\subseteq X$ ein linearer Teilraum eines normierten Raumes $X$ und $Y$
+  ein Banachraum. Dann existiert für $T_{0}\in\CL(M,Y)$ genau eine Fortsetzung
+  $\tau\in\CL(\cl(M), Y)$ von $T_{0}$ von $M$ auf $X$ mit $\norm{T}=
+  \norm{T_{0}}$.
+  \begin{proof}
+    \begin{enumerate}[1.\,Schr{i}tt]
+     \item Wir zeigen zuerst die Existenz einer Fortsetzung von $T_{0}$: Für
+      $x\in\cl(M)$ ist der Operator $T\colon\cl(M)\rightarrow Y$ durch
+      $Tx\coloneq \lim_{n\rightarrow\infty} T_{0}x_{n}$ definiert, wobei
+      $(x-N)\subset M$ mit $x_{n}\rightarrow x\in\cl(M)$.
+
+      $T$ ist wohldefiniert, denn für $x\in\cl(M)$ existiert $(x_{n})\subset
+      M$ mit $x_{n}\rightarrow x$ und $\norm{T_{0}x_{n}-T_{0}x_{m}}=
+      \norm{T_{0}(x_{n}-x_{m})}\leq\norm{T_{0}} \norm{x_{n}-x_{m}}$. Damit ist
+      $T_{0}(x_{n})$ eine Cauchyfolge, da $x_{n}$ Cauchyfolge. Wegen der
+      Vollständigkeit von $Y$ existiert $\lim_{n\rightarrow\infty}
+      T_{0}(x_{n})$. Es bleibt noch zu zeigen, dass $\lim_{n\rightarrow\infty}
+      Tx_{n}$ unabhängig von $(x_{n})\subset M$ mit $x_{n}\rightarrow x$ ist.
+      Dazu sei $(y_{n})\subset Y$ eine weitere Folge mit $y_{n}\rightarrow x$.
+      Es ist wieder $T_{0}y$ in $Y$ konvergent. Wir kommen damit zu der
+      Abschätzung: $\norm{T_{0} x_{n}- T_{0}y_{n}}=
+      \norm{T_{0}(x_{n}-y_{n})}\leq \norm{T_{0}} \norm{x_{n}-y_{n}}$. Also ist
+      $\lim_{n\rightarrow\infty} T_{0}x_{n}= \lim_{n\rightarrow\infty} T_{0}
+      y_{n}$. \todo{Hier Beweis weiter führen}
+    \end{enumerate}
+  \end{proof}
+\end{satz}
 
 \todo[inline]{Zwei Vorlesungen vom 2008-11-24}
+
+%Vorlesung vom 2008-11-26
+Jedoch hat man im Fall von beschränkten Funktionalen immer eine Fortsetzung
+von $M\subset X$ auf den ganzen Raum $X$ unter Beibehaltung der Norm. Das ist
+das berühmte \textsc{Hahn}"~\textsc{Banach}"~Theorem. Zur Vorbereitung des
+Beweises müssen wir ein Lemma benutzen:
+
+%lem II.4.2
+\begin{lem}
+  Sei $X$ ein $\C$"~Vektorraum.
+  \begin{enumerate}[(i)]
+   \item Ist $l\colon X\rightarrow\R$ ein $\R$-lineares Funktional, d.\,h.
+    $l(\alpha_{1}x_{1}+\alpha_{2}x_{2})= \alpha_{1}l(x_{1})+
+    \alpha_{2}(l(x_{2}))$ für $x_{1}, x_{2}\in X, \alpha_{1},
+    \alpha_{2}\in\R$. Setzt man $\tilde{l}(x)\coloneq l(x)-il(ix)$ für $x\in
+    X$, so ist $\tilde{l}\colon X\rightarrow\C$ ein $\C$"~lineares Funktional.
+    Es ist $l=\Re\tilde{l}$.
+   \item Ist $h$ ein $\C$"~lineares Funktional, $l=\Re h$ und $\tilde{l}$ wie
+    in (i) definiert, so ist $l$ ein $\R$"~lineares Funktional und
+    $\tilde{l}=h$.
+   \item Ist $X$ ein normierter Raum und $l\colon X\rightarrow\C$ ein
+    beschränktes $\C$"~lineares Funktional, so ist $\norm{l}= \norm{\Re l}$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}[(i)]
+     \item Es ist zu zeigen, dass $\tilde{l}$ ein $\C$"~lineares Funktional
+      ist. Zuerst zeigen wir die Linearität: $\tilde{l}(x_{1}+x_{2})=
+      (x_{1}+x_{2})- il(i(x_{1}+x_{2}))= l(x_{1})+ l(x_{2})-i(l(ix_{1})+
+      l(ix_{2}))= l(x_{1})-il(ix_{1})+ l(x_{2})-il(ix_{2})= \tilde{l}(x_{1})+
+      \tilde{l}(x_{2})$.
+
+      Sei zunächst $\alpha\in\R$ und $x\in X$. Dann hat man, $\tilde{l}(\alpha
+      x)= l(\alpha x)- il(\alpha ix)= \alpha l(x)-\alpha il(ix)= \alpha(l(x)-
+      il(ix)= \alpha\tilde{l}(x)$. Sei nun $\alpha=\alpha_{1}+ i\alpha_{2}$
+      mit $\alpha_{1}, \alpha_{2}\in\R$. Dann haben wir: $\tilde{l}(\alpha x)=
+      \tilde{l}(\alpha_{1}x+ \alpha_{2}ix)= \tilde{l}(\alpha_{1}x)+
+      \tilde{l}(\alpha_{2}ix)= \alpha_{1}\tilde{l}(x)+
+      \alpha_{2}\tilde{l}(ix)$. Nun müsen wir noch zeigen, dass
+      $\tilde{l}(ix)= i\tilde{l}(x)$: $\tilde{l}(ix)= l(ix)-il(i(ix))=
+      l(ix)-il(-x)= l(ix)+il(x)=i(l(x)-i(lix))= i\tilde{l}(x)$. Damit folgt,
+      $\tilde{l}(\alpha x)= \alpha_{1}\tilde{l}(x)+ \alpha_{2}i\tilde{l}(x)=
+      \alpha\tilde{l}(x)$.$)$
+     \item Sei $h\colon X\rightarrow\C$ ein $\C$"~lineares Funktional, $l=\Re
+      h$ und $\tilde{l}$ wie oben. Wir zeigen zuerst, dass $l$ $\R$"~linear
+      ist: Für $\alpha_{1}, \alpha_{2}\in\R$ und $x_{1}, x_{2}\in X$ gilt,
+      $l(\alpha_{1}x_{1}+ \alpha_{2}x_{2})= \Re h(\alpha_{1}x_{1}+
+      \alpha_{2}x_{2})= \Re(\alpha_{1} h(x_{1})+ \alpha_{2}h(x_{2}))=
+      \alpha_{1} \Re h(x_{1})+ \alpha_{2}\Re h(x_{2})= \alpha_{1}l(x_{1})+
+      \alpha_{2}l(x_{2})\Rightarrow l$ ist $\R$"~linear.
+
+      Nun müssen wir noch zeigen, dass $h=\tilde{l}$: Wegen $\Im z= -\Re iz$
+      für $z\in\C$ folgt, $h(x)= \Re h(x)+i\Im h(x)=  \Re h(x)+i (-\Re
+      ih(x))=\Re h(x)- i\Re h(ix)= l(x)-il(ix)=\tilde{l}(x)$.
+     \item Wegen $\abs{\Re l(x)}\leq\abs{l(x)}\leq\norm{l} \norm{x}\Rightarrow
+      \norm{\Re l}\leq\norm{l}$. Für die Umkehrung gilt: Für $x\in X$
+      existiert ein $\lambda\coloneq\lambda_{x}\in\C$ mit $\abs{\lambda}=1$
+      und $l(x)= \lambda\abs{l(x)}$ (Polardarstellung einer komplexen Zahl).
+      Also gilt, dass $\abs{l(x)}= \lambda^{-1}l(x)=
+      \underbrace{l(\lambda^{-1} x)}_{\in\R}= \Re l(\lambda^{-1}x)\leq\abs{\Re
+      l(\lambda^{-1}x)}\leq\norm{\Re l} \norm{\lambda^{-1}x}= \norm{\Re l}
+      \abs{\lambda^{-1}} \norm{x}= \norm{\Re l} \norm{x}\Rightarrow
+      \norm{l}\leq\norm{\Re l}$. Damit folgt die Behauptung.
+    \end{enumerate}
+  \end{proof}
+\end{lem}
+
+\begin{bemerk}
+  Durch den Ansatz $\phi(l)\coloneq\Re l$ wird eine bijektive $\R$"~lineare
+  Abbildung von dem Vektorraum der $\C$"~linearen Funktionale auf den
+  Vektorraum der $\R$"~linearen Funktionale definiert. Im normierten Fall ist
+  $\phi$ isometrisch, d.\,h. $\norm{\phi(l)}= \norm{l}$.
+  \begin{proof}
+    $\phi$ ist $\R$"~linear ist klar wegen der Definition. Der Rest ist auch
+    klar. Die Injektivität ergibt sich durch: $\phi(l)(x)= \Re l(x)+ i\Im l(x))= \Re
+    l(x)- i\Re(il(x))= \Re l(x)-i\Re l(ix)=0$ für alle $x\in X\Rightarrow
+    l=0$. Im normierten Fall ist $\norm{\phi(l)}= \norm{l}$.
+  \end{proof}
+\end{bemerk}
+
+
+
 
 \clearpage
 \appendix
@@ -2145,8 +2270,46 @@ x+y\coloneq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneq (\lambda\xi_{i})$ für $\
   $\norm{Tx}\leq\norm{T} \norm{x}$ folgt, dass $A\leq\norm{T}$.
 \end{enumerate}
 
+%aufgabe 7
+\todo{Aufgaben 1--6 noch einfügen und Überschrift}
+\begin{enumerate}
+ \item Seien $E\coloneq\{x\in C[0,1]\colon x(1)=0\}, \norm{\cdot}_{\infty}=
+  \sup\abs{\cdot}$ ein normierter Raum, $M\coloneq\{x\in E\colon\int_{0}^{1}
+  x(s)\,ds=0\}$. Dann ist $E$ bezüglich $\norm{\cdot}_{\infty}$ ein normierter
+  Raum und $M\subsetneq E$ ein abgeschlossener linearer Teilraum. Man zeige,
+  dass $\forall x\in E\colon\norm{x}_{\infty}=1\Rightarrow d(x,M)<1$. (Lösung
+  siehe \cite{werner04})
+ \item Sei $B_{X}$ die abgeschlossene Einheitskugel eines normierten Raumes
+  $X$. Dann gilt für die Entropiezahlen $E_{n}(B_{X})$ die
+  Multiplikationsformel $E_{mn}(B_{X})\leq E_{n}(B_{X})E_{m}(B_{X})$ mit
+  $m,n\in\N$.
+
+  Damit kann man folgern, $E_{n}(B_{X})=1$, falls $\dim X=\infty$.
+\end{enumerate}
+
+\section{Aufgaben zu Operatoren}
+
+%Aufgabe 9
+\begin{enumerate}[{A}ufg{a}be~9]
+ \item Sei $1\leq p<\infty$. Für ein beschränktes lineares Funktional
+  $a\colon\ell_{p}\rightarrow\K$ existiert eine Darstellung der Form $a(x)=
+  \sum_{i=1}^{\infty} \alpha_{i} \xi_{i}$ mit $x=(\xi_{i})\in\ell_{p}, \alpha=
+  (\alpha_{i})\in\ell_{p'}, \nicefrac{1}{p'}+ \nicefrac{1}{p}=1$ und für die
+  Norm von $a$ gilt $\norm{a}= (\sum_{i=1}^{\infty}
+  \abs{\alpha_{i}}^{p'})^{\nicefrac{1}{p'}}$. Ferner gilt
+  $\ell_{p}'\cong\ell_{p'}$. Das ist eine Isometrie von $\ell_{p}'$ auf
+  $\ell_{p'}$.
+  %Aufgabe 10
+ \item Sei $\alpha$ eine stetige Funktion aus dem Intervall $[0,1]$
+  ($\alpha\in C[0,1]$). Dann wird durch $a(x)\coloneq\int_{0}^{1}
+  \alpha(t)x(t)\,dt$ ein beschränktes lineares Funktional auf $C[0,1]$
+  definiert. Für die Norm von $a$ gilt die Abschätzung
+  $\norm{a}=\int_{0}^{1} \abs{\alpha(t)}\,dt$.
+\end{enumerate}
+
 \begin{thebibliography}{99}
- \bibitem{werner04} D.\,Werner. Funktionalanalysis. Springer 2004
+
+  \bibitem{werner04} D.\,Werner. Funktionalanalysis. Springer 2004
 
  \bibitem{werner06}  D.\,Werner. Einführung in die höhere Analysis. Springer
   2006
