Für max den vordefinierten Operator \max verwenden
git-svn-id: https://svn.lug-jena.de/uni-skripte@1931 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -1451,7 +1451,7 @@ $\{x,y,z\} \cap P = \emptyset$
 , so dass  
 $P \subset \operatorname{CONV}\{x,y,z\}$ 
 und Radius der umschließenden Kreisscheibe von 
-$xyz >> max\{ \norm{ p_i - p_j } | p_i, p_j \in P \} \forall i = 1, ..., n$.
+$xyz >> \max\{ \norm{ p_i - p_j } | p_i, p_j \in P \} \forall i = 1, ..., n$.
 
 $D_0 = D(x,y,z)$ Delaunay-Triangulierung von x,y,z.
 \begin{enumerate}
