Spatien in Abkürzungen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1935 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -798,7 +798,7 @@ Der umschreibende Ball für einen $d$-Simplex im $\R^d$ ist eindeutig.
 Sei $T$ eine Triangulierung von $P$, wobei $P$ eine ungewichtete Punktemenge im $\R^2$ sei.
 $T$ hat die lokale Delaunay-Eigenschaft falls jede Kante der Triangulierung entweder
 \begin{enumerate}
-\item eine inzidentes Dreieck hat. (D.h. Kante ist auf dem Rand der komplexen Hülle von $T$)
+\item eine inzidentes Dreieck hat. (D.\,h. Kante ist auf dem Rand der komplexen Hülle von $T$)
 \item Kante hat 2 inzidente Dreiecke $abc$ und $bcd$ hat, so dass der umschreibende Ball von $abc$ den Punkt $d$ nicht enthält.
 \end{enumerate}
 \end{defini}
@@ -862,12 +862,12 @@ Aus Punkt 3 der Beobachtung folgt also die Behauptung.
 
 Lawson-Flip
 Wann immer $bc$ nicht die lokale Delaunay-Eigenschft hat, dann ``flippen'' der Kante zu $ad$.
-d.h. in Triangulierung tauschen wir die Dreiecke $abc$ und $bcd$ aus durch $abd$ und $adc$.
+d.\,h. in Triangulierung tauschen wir die Dreiecke $abc$ und $bcd$ aus durch $abd$ und $adc$.
 
 \includegraphics[width=0.3\textwidth]{grafiken/flip}
 
 
-Der Lawson-Flip-Algorithmus muss entscheiden, ob $bc$ die lokale Delaunay-Eigenschaft hat, d.h. ob $d$ in der Umkreisscheibe von $abc$ enthalten ist. Dazu benötigt man den IN\_CIRCLE\_TEST.
+Der Lawson-Flip-Algorithmus muss entscheiden, ob $bc$ die lokale Delaunay-Eigenschaft hat, d.\,h. ob $d$ in der Umkreisscheibe von $abc$ enthalten ist. Dazu benötigt man den IN\_CIRCLE\_TEST.
 
 
 \begin{satz}[Lifted Circle Claim]
@@ -1103,7 +1103,7 @@ $\gamma_1, \gamma_2 < \gamma_1 + \gamma_2$
 $\gamma_1 < \alpha_2$
 $\beta_2 < \alpha_1$
 
-D.h. für jeden Winkel aus $w(T)$ gibt es einen größeren n $w(T')$. Da die Anzahl der Triangulierungen endlich und das Maß immer ansteigend ist folgt daraus, dass der Algorithmus terminiert.
+D.\,h. für jeden Winkel aus $w(T)$ gibt es einen größeren n $w(T')$. Da die Anzahl der Triangulierungen endlich und das Maß immer ansteigend ist folgt daraus, dass der Algorithmus terminiert.
 \end{proof}
 
 \begin{satz}[Thales]
@@ -1195,7 +1195,7 @@ Kurze Kostenanalyse:
 \text{Finden des lexik. kleinsten Elements} + h * (n-2) * \text{IS\_LEFT\_OF}
 \]
 $h$ ist die Anzahl der Extrempunkte.
-Das bedeutet der Jarvis-Wrap-Algorithmus ist Output-Sensitiv, d.h. Laufzeit hängt von Anzahl der Extrempunkte ab.
+Das bedeutet der Jarvis-Wrap-Algorithmus ist Output-Sensitiv, d.\,h. Laufzeit hängt von Anzahl der Extrempunkte ab.
 
 \subsubsection{Implementierung des IS\_LEFT\_OF-Prädikats}
 Falls $r \in \operatorname{aff}(p,q)$:
@@ -1236,7 +1236,7 @@ daraus folgt: $p$,$q$ und $r$ sind linear abhängig. Das bedeutet, die folgende D
 %		1	r_x	r_y
 \]
 
-Aus dem stetigen Bewegungs-Argument (z.B. mit Punkten $p = (1,0)$, $q = (0,1)$ und $r = (0,0)$) folgt:
+Aus dem stetigen Bewegungs-Argument (z.\,B. mit Punkten $p = (1,0)$, $q = (0,1)$ und $r = (0,0)$) folgt:
 $r$ ist links von der affinen Hülle, falls $\Delta > 0$. Argument folgt aus der Stetigkeit der Determinante. 
 
 %Der Jarvis-Wrap algorithmus ist numerisch unstabil. Die Auswertung des Prädikats schlägt bei float-Werten relativ oft fehl, so dass die Gefahr einer endlosschleife besteht.
@@ -1494,7 +1494,7 @@ und mehreren Flip-Operationen (genannt \enquote{2-2-Flip}).
 Sei $\sigma \in D_i \notin D_{i-1}$, dann hat $\sigma$ den Punkt $p_i$ als einen seiner Knoten.
 \end{lemma}
 \begin{proof}
-Da $\sigma$ Delaunay-Dreieck enthält die Umkreisscheibe keinen Punkt von $S_i$ im Innern. Da $S_{i-1} \subset S_i$ gilt das gleiche für $S_{i-1}$, d.h. falls $p_i$ kein Knoten von $\sigma$ ist, dann $\sigma \in D_{i-1}$. Daraus folgt: $p_i$ Knoten von $\sigma$.
+Da $\sigma$ Delaunay-Dreieck enthält die Umkreisscheibe keinen Punkt von $S_i$ im Innern. Da $S_{i-1} \subset S_i$ gilt das gleiche für $S_{i-1}$, d.\,h. falls $p_i$ kein Knoten von $\sigma$ ist, dann $\sigma \in D_{i-1}$. Daraus folgt: $p_i$ Knoten von $\sigma$.
 \end{proof}
 
 
@@ -1513,7 +1513,7 @@ Jeder Flip erzeugt ein neues Dreieck inzident zu $p_i$
 \item Nach jeder Operation müssen wir immer nur die noch nicht geprüften Kanten im Link von $p_i$ auf die lokale Delaunay-Eigenschaft prüfen.
 \end{enumerate}
 
-Beispiel: Kaskadierender Flip, d.h. es reicht nicht nur die Kanten des Dreiecks in das $p_i$ eingefügt wurde auf die lokale Delaunay-Eigenschaft zu prüfen.
+Beispiel: Kaskadierender Flip, d.\,h. es reicht nicht nur die Kanten des Dreiecks in das $p_i$ eingefügt wurde auf die lokale Delaunay-Eigenschaft zu prüfen.
 
 \begin{figure}
 \begin{center}
@@ -1523,7 +1523,7 @@ Beispiel: Kaskadierender Flip, d.h. es reicht nicht nur die Kanten des Dreiecks 
 \end{figure} 
 
 
-$\operatorname{GRAD}(p_i) \leq i-1$, d.h. höchstens $\frac{i-1}{2}$ Flips beim Einfügen von $p_i$.
+$\operatorname{GRAD}(p_i) \leq i-1$, d.\,h. höchstens $\frac{i-1}{2}$ Flips beim Einfügen von $p_i$.
 
 Faustregel und Trick: Wenn immer die Auswahl in einem Algorithmus beliebig ist, dann treffe die Entscheidung zufällig.
 In diesem Fall bedeutet das, dass wir die Reihenfolge der Punkte $p_1, \dotsc, p_n$ zufällig wählen.
@@ -1578,7 +1578,7 @@ Knoten des Graphen sind alle Dreiecke, die im Verlauf des inkrementellen Algorit
 Beweis der Eulerformel: $v -e + f = 2$
 
 \begin{enumerate}
- \item 1-Skelett der Delaunay-Triangulierung. (D.h. der planare Graph der Delaunay-Kanten und Vertices.)
+ \item 1-Skelett der Delaunay-Triangulierung. (D.\,h. der planare Graph der Delaunay-Kanten und Vertices.)
 \item 1-Skelett enthält minimalen Spannbaum von $P$.
 \end{enumerate}
 
