Gleitumgebungen fehlende Beschriftung geben
Eine Gleitumgebung muss eine Beschriftung (\caption) haben, sonst
funktioniert \label nicht richtig. Siehe nag‐Meldungen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1939 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -486,7 +486,7 @@ $p = (1,2), q = (2,3), r = (3,4)$
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics{grafiken/grafik1}
-%\caption{default}
+\caption{\todo{Beschriftung ergänzen}}
 \label{grafik1}
 \end{center}
 \end{figure}
@@ -502,7 +502,7 @@ r^* &= \{x \in R^2 | x_2 = 3 x_1 - 4\}
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics{grafiken/grafik2}
-%\caption{default}
+\caption{\todo{Beschriftung ergänzen}}
 \label{grafik2}
 \end{center}
 \end{figure}
