In Gleitumgebungen \centering statt der Umgebung center verwenden
Die Umgebung center fügt davor und danach einen Absatzabstand ein. Die
Umgebung ist dafür gedacht, wenn Absätze eingerückt werden soll. In
Gleitumgebungen ist aber dieser Abstand störend. Daher soll hier nur der
Schalter \centering verwendet werden, der nur auf Zentrieren umschaltet
und keine Abstände einfügt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1940 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -484,11 +484,10 @@ $(p^*)^* = p$, $(h^*)^* = h$
 \begin{bsp}
 $p = (1,2), q = (2,3), r = (3,4)$
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics{grafiken/grafik1}
 \caption{\todo{Beschriftung ergänzen}}
 \label{grafik1}
-\end{center}
 \end{figure}
 
 \begin{gather*}
@@ -500,11 +499,10 @@ r^* &= \{x \in R^2 | x_2 = 3 x_1 - 4\}
 \end{gather*}
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics{grafiken/grafik2}
 \caption{\todo{Beschriftung ergänzen}}
 \label{grafik2}
-\end{center}
 \end{figure}
 
 Die drei gerade schneiden sich bei Punkt $(1, -1)$. Dessen duale Ebene ist genau die, die durch die drei Punkte geht. 
@@ -651,9 +649,8 @@ $p \in P$
 \end{defini}
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/voronoi}
-\end{center}
 \caption{Voronoi-Diagramm}
 \end{figure} 
 
@@ -698,9 +695,8 @@ Zellkomplex, der von den Voronoi-Faces gebildet wird.
 \end{defini}
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.6\textwidth]{grafiken/delaunay-triangulierung}
-\end{center}
 \caption{Delaunay-Triangulierung und ihr duales Voronoi-Diagramm}
 \end{figure} 
 
@@ -804,9 +800,8 @@ $T$ hat die lokale Delaunay-Eigenschaft falls jede Kante der Triangulierung entw
 \end{defini}
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.8\textwidth]{grafiken/delaunayeigenschaft}
-\end{center}
 \caption{lokale Delaunay-Eigenschaft}
 \end{figure} 
 
@@ -1146,9 +1141,8 @@ Das algorithmische Ziel ist das Aufzählen der Extrempunkte entlang des Randes de
 Dazu benötigen wir das Prädikat $\operatorname{IS\_LEFT\_OF}(p,q,r)$ das uns sagt, ob $r$ links von (auf, rechts) der geraden durch $p$ und $q$ liegt.
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/isleftof}
-\end{center}
 \caption{IS\_LEFT\_OF-Prädikat}
 \end{figure} 
 
@@ -1248,9 +1242,8 @@ Halbkanten-Datenstruktur:
 Kante zwischen $p$ und $q$ wird gespeichert als zwei Halbkanten.
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/halbkanten}
-\end{center}
 \caption{Halbkanten-Datenstruktur}
 \end{figure} 
 
@@ -1361,16 +1354,14 @@ Analog folgt $3n - 6 \geq n_{Ka}$
 
 \subsection{Sweep Line Paradigma}
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.7\textwidth]{grafiken/sweepline}
-\end{center}
 \caption{sweep line}
 \end{figure} 
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/beachline}
-\end{center}
 \caption{beach line}
      \end{figure} 
 
@@ -1385,9 +1376,8 @@ Sweepline trifft auf einen Punkt aus $P$.
 \end{enumerate}
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = \textwidth]{grafiken/punktevent}
-\end{center}
 \caption{Punkt-Event}
 \end{figure} 
 
@@ -1477,9 +1467,8 @@ $D_0 = D(x,y,z)$ Delaunay-Triangulierung von x,y,z.
 \end{algorithm}
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = \textwidth]{grafiken/D1-3}
-\end{center}
 \caption{$D_0$, $D_1$ und $D_2$}
 \end{figure} 
 
@@ -1516,9 +1505,8 @@ Jeder Flip erzeugt ein neues Dreieck inzident zu $p_i$
 Beispiel: Kaskadierender Flip, d.\,h. es reicht nicht nur die Kanten des Dreiecks in das $p_i$ eingefügt wurde auf die lokale Delaunay-Eigenschaft zu prüfen.
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = \textwidth]{grafiken/kaskadierenderflip}
-\end{center}
 \caption{kaskadierender Flip}
 \end{figure} 
 
@@ -1560,16 +1548,14 @@ Gerichteter, azyklischer Graph. Abgeleitet aus Split und Flip.
 Knoten des Graphen sind alle Dreiecke, die im Verlauf des inkrementellen Algorithmus auftauchen.
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/dg-flip}
-\end{center}
 \caption{Delaunay-Graph beim Flip}
 \end{figure} 
 
 \begin{figure}
-\begin{center}
+  \centering
  \includegraphics[width = 0.5\textwidth]{grafiken/dg-split}
-\end{center}
 \caption{Delaunay-Graph beim Split}
 \end{figure} 
 
@@ -1641,19 +1627,17 @@ $D_i$ entsteht durch $D_{i-1}$ durch
 \end{enumerate}
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/22flip}
 \caption{2-2-Flip}
 \label{default}
-\end{center}
 \end{figure}
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/13flip}
 \caption{1-3-Flip}
 \label{default}
-\end{center}
 \end{figure}
 
 
@@ -1706,11 +1690,10 @@ Seien $Y_j$ die Dreiecke inzident zu $p_i$, die beim Einfügen von $p_{j+1}$ in $
 \[ \abs{X_j} = \abs{H_j} - (\abs{Z_j} - \abs{Y_j})\]
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.7\textwidth]{grafiken/symbolischedarstellung}
 \caption{Symbolische Darstellung der Variablen}
 \label{default}
-\end{center}
 \end{figure}
 
 Beachte: $Y_j \subseteq Z_j$ und $Z_j \ Y_j \subseteq H_j$
@@ -2013,40 +1996,36 @@ Gewichteter Punkt: $(p, w_p) \in \R^3 \times \R$
 Powerabstand zum gewichteten Punkt: $\pi_p (x) = \norm{x-p}^2 - w_p$
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/graphenabstandsfunktion-normal}
 \caption{Graph der Abstandsfunktion}
 \label{default}
-\end{center}
 \end{figure}
 
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/graphenabstandsfunktion-quadratisch}
 \caption{Graph der quadratischen Abstandsfunktion}
 \label{default}
-\end{center}
 \end{figure}
 
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/graphenabstandsfunktion-power}
 \caption{Graph der quadratischen Powerabstände}
 \label{default}
-\end{center}
 \end{figure}
 
 
 \begin{beob}
 Nicht alle Eingabepunkte sind Knoten in der Delaunay-Triangulierung. Das tritt genau dann auf, wenn die zugehörige Powerzelle leer ist.
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/leerepowerzelle}
 \caption{Die Powerzelle von $p_2$ ist leer}
 \label{default}
-\end{center}
 \end{figure}
 
 Ein gewichteter Punkt ist relevant genau dann, wenn seine Powerzelle nicht leer ist.
@@ -2055,11 +2034,10 @@ Ein gewichteter Punkt ist relevant genau dann, wenn seine Powerzelle nicht leer 
 \begin{beob}
 Ein gewichteter Punkt muss nicht in der eigenen Powerzelle enthalten sein.
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/punktnichtinseinerpowerzelle}
 \caption{$p_2$ ist nicht in seiner Powerzelle enthalten}
 \label{default}
-\end{center}
 \end{figure}
 \end{beob}
 
@@ -2077,11 +2055,10 @@ $(p, w_p), (q, w_q)$ gewichtete Punkte sind orthogonal zueinander, falls $\pi_{p
 Gewichteter Punkte mit positivem Gewicht kann als Ball aufgefasst werden.
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/gewichteterpunktalsball}
 \caption{Darstellung eines gewichteten Punkts als Ball im $\R^2$}
 \label{default}
-\end{center}
 \end{figure}
 \todo{bild}
 \end{bemerk}
@@ -2092,11 +2069,10 @@ Gewichteter Punkte mit positivem Gewicht kann als Ball aufgefasst werden.
 Die Tangenten in den Schnittpunkten sind orthogonal.
 
 \begin{figure}[htbp]
-\begin{center}
+  \centering
 \includegraphics[width = 0.5\textwidth]{grafiken/orthogonaletangenten}
 \caption{2 Sphären mit orthogonalen Tangenten}
 \label{default}
-\end{center}
 \end{figure}
 
 \end{defini}
