--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -192,6 +192,7 @@
 \newcommand*{\FS}{\mathfrak{S}}
 
 \DeclareMathOperator{\rg}{rg}
+\DeclareMathOperator{\spn}{span}
 
 \makeindex
 
@@ -1238,7 +1239,7 @@ Wir betrachten hier Mannigfaltigkeiten im abstrakten Sinne ohne einen
 euklidischen Umgebungsraum. Grundlage ist der Begriff des topologischen
 Raumes. Bei den Grundlagen der Topologie sind wir nicht auf den topologischen
 Dimensionsbegriff eingegangen (siehe hierzu \cite{rinow}). Ein zentrales
-Resultat hier ist der Satz von Brower. Er besagt, dass zwei nichtleere offene
+Resultat hier ist der Satz von \textsc{Brower}. Er besagt, dass zwei nichtleere offene
 Teilmengen  $U\subset\R^{n}$ und $V\subset\R^{m}$ für $n\neq m$ \emph{nicht}
 homöomorph sind.
 
@@ -1265,7 +1266,7 @@ homöomorph sind.
   \highl{Kartengebiet} $U$ genannt. Das $W=\phi(U)$ heißt
   \highl{Koordinatengebiet}. Bei der Umkehrabbildung $\phi^{-1}\colon
   X\rightarrow U$ spricht man auch von der
-  \highl[Parametrisierung!lokale]{lokale Parametrisierung}.
+  \highl[Parametrisierung!lokale]{lokalen Parametrisierung}.
 
   Für ein beliebiges $y\in U$ wird zugeordnet $\phi(y)= \overline{y}=
   (y_{1},\dotsc, y_{n})$. Diese Punkte heißen
@@ -1515,6 +1516,213 @@ $l\leq k$.
   \circ(\phi')^{-1}}_{C^{k}})$. Wegen $k\geq l$ ist es mindestens eine
   $C^{l}$"~Abbildung.
 \end{bemerk}
+
+% Vorlesung vom 2008-11-27
+\begin{defini}
+  Sei $f\colon M\rightarrow N$. Die Abbildung heißt
+  \highl{$C^{l}$"~differenzierbar}, falls $f$ in jedem Punkt von $M$
+  $C^{l}$"~differenzierbar ist.
+\end{defini}
+
+\begin{uebung}
+  Weise nach, dass die Verknüpfung zweier differenzierbarer Abbildungen wieder
+  differenzierbar ist: $f\colon M\rightarrow M', g\colon M'\rightarrow M''$
+  sind $C^{l}$"~differenzierbar. Dann ist $g\circ f\colon M\rightarrow M''$
+  wieder $C^{l}$"~differenzierbar.
+\end{uebung}
+
+\begin{defini}
+  Sei $f\colon M\rightarrow N$. Die Abbildung heißt
+  \highl{$C^{l}$-Diffeomorphismus}\index{Diffeomorphismus}, falls $f$ bijektiv
+  ist und $f,f^{-1}$ jeweils $C^{l}$"~Abbildungen sind.
+\end{defini}
+
+\begin{bemerk}
+  Die $C^{k}$"~Diffeomorphismen zwischen $C^{k}$"~Mannigfaltigkeiten spielen
+  eine ähnliche Rolle wie Homöomorphismen für topologische Räume.
+\end{bemerk}
+
+\begin{bsp}
+  Sei $M=N=\R$. Wir geben uns die Abbildung $f\colon M\rightarrow N$ mit
+  $f(x)=x^{3}$ vor. Diese Abbildung ist bijektiv und in beide Richtungen
+  stetig. Es ist $\CA_{M}=(\R,f,\R)$ ein Atlas für $\R$ aus einer Karte und
+  $\CA_{N}= (\R,\iota,\R)$ ebenfalls ein Atlas. Die Karten sind \emph{nicht}
+  $C^{\infty}$"~verbunden\footnote{Gilt aber auch für jedes belibige $k$.}.
+  Denn es ist $\iota\circ f^{-1}=f^{-1}$ nicht $C^{\infty}$. Damit folgt,
+  $\CD(\CA_{M})\neq\CD(\CA_{N})$.
+
+  Wir wollen uns nun überlegen, dass $f$ ein Diffeomorphismus ist: $f\colon(M,
+  \CD(\CA_{M}))\rightarrow(N, \CD(\CA_{N}))$. Denn $\psi\circ f\circ\phi=
+  \iota\circ f\circ f^{-1}=\iota$ ist $C^{\infty}$. Umgekehrt ist $\phi\circ
+  f\circ\psi^{-1}= f\circ f^{-1}\circ\iota= \iota$ auch in $C^{\infty}$.
+\end{bsp}
+
+Wir suchen nun den Begriff des Differenzials von differenzierbaren
+Abbildungen. Im allgemeinen Fall kann $g\coloneq\psi\circ
+f\circ\phi^{-1}$ als Koordinatendarstellung von $f$  interpretiert werden. Wir
+wissen bereits: Das Differenzial $Dg(\overline{x})$ von $g\colon
+G\subset\R^{n}\rightarrow\R^{d}$ sei offen im Punkt $\overline{x}\in G$. Es
+ist definiert: $Dg(\overline{x})\in L(\R^{n}, \R^{d})$ mit
+$g(\overline{x}+\overline{v})- g(\overline{x})= Dg(\overline{x})\overline{v}+
+o(\abs{\overline{v}})$.
+
+\begin{bemerk}
+  Es könnte zur Definition von $Df(x)$ verwendet werden. Wir suchen aber einen
+  koordinatenfreien Zugang. Ein Hilfsmittel sind Tangentialräume an die
+  Mannigfaltigkeiten in ihren Punkten. Die Rolle der $\overline{v}$ von oben
+  spielen dann die Vektoren der Tangentialräume.
+\end{bemerk}
+
+Es existieren drei Möglichkeiten, Tangentialräume einzuführen. Zuerst sind das
+Tangentialvektoren als \emph{äquivalente Kurvenscharen}. Dies ist der
+geometrische Zugang. Der zweite Zugang besteht darin, Tangentialvektoren als
+\emph{Derivationen} auf dem Ring der differenzierbaren "`Funktionskeime"' als
+algebraischen Weg zu wählen. Der hier gewählte Zugang ist ein physikalischer.
+Das geht auf das \textsc{Ricci}"~Kalkül der Differentialgeometrie zurück.
+(Details in \cite{jaenig}). Die Grundidee ist, dass Mannigfaltigkeiten lokal
+linearisiert werden. Dabei soll der bekannte Begriff von Tangentialräumen an
+Räumen und Flächen im euklidischen Raum mit eingeschlossen sein.
+Zu Beginn der Betrachtungen steht eine Wiederholung aus der Analysis:
+
+\paragraph{Tangentialräume an Kurven und Flächen im $\R^{3}$}
+Wir wählen die Parameterdarstellung einer einfachen $C^{1}$"~Kurve im
+$\R^{3}$: Sei $\overline{x}\colon(0,1)\rightarrow C\subset\R^{3}$ stetig
+differenzierbar, bijektiv und $\frac{d\overline{x}}{dt}(t)\neq0$ für alle $t$.
+Dies ist dann die lokale Parametrisierung einer Kurve. Die Abbildung
+$\overline{x}$ entspricht dem obigen $\phi^{-1}$. Der Tangentialraum ist
+$T_{\overline{x}(t)}C\coloneq(x(t), \spn(\frac{d\overline{x}}{dt}
+(t)))$. Diese Definition ist unabhängig von der Parametrisierung der Kurve.
+Für den Nachweis betrachten wir die Parametertransformation\footnote{auch als
+lokale Koordinatentransformation genannt} $t=t(t')$, d.\,h. ein
+Diffeomorphismus von $(0,1)$. Damit folgt,
+$\overline{x}'(t')\coloneq\overline{x}(t(t'))$ neue Parametrisierung für $C$.
+Es ist
+\begin{gather}
+  \label{eq:71}
+     \frac{d\overline{x}'}{dt'} (t')= \frac{d\overline{x}}{dt} (t(t'))
+     \frac{dt}{dt'} (t')
+\end{gather}
+Wenn man die linearen Hüllen miteinander vergleicht,
+sieht man dass die eine Seite nur ein Vielfaches der anderen ist und die
+linearen Hüllen gleich sind. 
+
+\paragraph{Parameterdarstellung von einfachen $C^{1}$"~Flächen im $\R^{3}$}
+Wir nennen die Abbildung wieder $\overline{x}\colon(0,1)^{2}\rightarrow
+F\subset\R^{3}$. Die Abbildung sei wieder stetig differenzierbar und bijektiv.
+Der Rang von $(\frac{\partial\overline{x}}{\partial\overline{u}})$ mit
+$\overline{x}=(x_{1}, x_{2}, x_{3})$ und $\overline{u}=(u_{1}, u_{2})$ sei
+gleich 2. Es ist $T_{\overline{x}(\overline{u})}
+F\coloneq\{(\overline{x}(\overline{u}),\overline{v})\colon
+\overline{v}\in\spn(\frac{\partial\overline{x}}{\partial u_{1}}(\overline{u}),
+\frac{\partial\overline{x}}{\partial u_{2}}(\overline{u}))\}$.
+
+Sei $\overline{u}= \overline{u}(\overline{u}')$ eine Parametertransformation,
+d.\,h. ein Diffeomorphismus von $(0,1)^{2}$.
+Dann folgt, $\overline{x}'(\overline{u}')=
+\overline{x}(\overline{u}(\overline{u}'))$ von $F$ und
+\begin{gather*}
+  \frac{\partial\overline{x}'}{\partial u_{1}}(\overline{u}')=
+     \frac{\partial\overline{x}}{\partial u_{1}}(\overline{u}(\overline{u}'))
+     \frac{\partial u_{1}}{\partial u_{1}'}(\overline{u}')+
+     \frac{\partial\overline{x}}{\partial u_{2}}(\overline{u}(\overline{u}'))
+     \frac{\partial u_{2}}{\partial u_{1}'}(\overline{u}')\\
+    \frac{\partial\overline{x}'}{\partial u_{2}}(\overline{u}')=
+     \frac{\partial\overline{x}}{\partial u_{1}}(\overline{u}(\overline{u}'))
+     \frac{\partial u_{1}}{\partial u_{2}'}(\overline{u}')+
+     \frac{\partial\overline{x}}{\partial u_{2}}(\overline{u}(\overline{u}'))
+     \frac{\partial u_{2}}{\partial u_{2}'}(\overline{u}')\\
+\end{gather*}
+Also ist $\frac{\partial\overline{x}'}{\partial u_{1}'}\in\spn(\frac{\partial
+\overline{x}}{\partial u_{1}}, \frac{\partial\overline{x}}{\partial u_{2}})\ni
+\frac{\partial\overline{x}'}{\partial u_{2}'}$. Wir können die Rollen von
+$(\overline{x}, \overline{u})$ und $(\overline{x}', \overline{u}')$
+vertauschen und erhalten, dass $\frac{\partial\overline{x}}{\partial u_{1}},
+\frac{\partial\overline{x}}{\partial u_{2}}\in\spn(\frac{\partial
+\overline{x}'}{\partial u_{1}'}, \frac{\partial\overline{x}'}{\partial
+u_{2}'})$. Damit sind die linearen Hüllen gleich.
+
+Nun betrachten wir ein $n$"~dimensionales Flächenstück im $\R^{d}$ und setzen
+voraus, dass $d\geq n$. Die Abbildung $\overline{x}\colon (0,1)^{n}\rightarrow
+F\subset\R^{d}$ sei bijektiv, stetig differenzierbar und der Rang der
+Jacobi"=Matrix sei $n$. Dann ist der Tangentialraum:
+$T_{\overline{x}(\overline{u})}= \{(\overline{x}(\overline{u}),
+\overline{v})\colon \overline{v}\in\spn(\frac{\partial\overline{x}}{\partial
+u_{1}}(\overline{u}),\dotsc,\frac{\partial\overline{x}}{\partial
+u_{n}}(\overline{u}))\}$. Weiter haben wir:
+\begin{gather*}
+  \frac{\partial\overline{x}'}{\partial u_{i}'}(\overline{u}')= \sum_{i=1}^{n}
+     \frac{\partial\overline{x}}{\partial u_{j}}(\overline{u}(\overline{u}'))
+     \frac{\partial u_{j}}{\partial u_{i}'} (\overline{u}')
+\end{gather*}
+als Vorschrift, wie Basiselemente getauscht werden. Wir schreiben irgendeinen
+Koordinatenvektor $\overline{v}=
+\begin{pmatrix}
+  v_{1}\\
+  \vdots\\
+  v_{n}
+\end{pmatrix}$ von belibigen Tangentialvektoren transformiert sich dann nach
+der Regel:
+\begin{gather*}
+  v_{i}'= \sum_{j=1}^{n} \frac{\partial u_{j}'}{\partial u_{i}}
+     (\overline{u}') v_{j}
+\end{gather*}
+Nochmal in Matrixschreibweise der Transformationsregel:
+\begin{gather*}
+  \overline{v}'=
+     \left(\frac{\partial\overline{u}'}{\partial\overline{u}}(\overline{u}')\right) \cdot\overline{v}
+\end{gather*}
+
+\paragraph{Tangentialräume an differenzierbaren Mannigfaltigkeiten}
+Wir geben uns eine Mannigfaltigkeit $M$ mit einer differenzierbaren Struktur
+sowie einen Punkt $x\in M$ vor und bezeichnen mit $\CD_{x}$ die Menge aller
+Karten von $\CD$ um $x$. Weiter bezeichnen wir mit $T_{x}M$ die Menge aller
+Abbildungen derart, dass für jeden Kartenwechsel
+$(U,\phi)\rightarrow(U',\phi')$ gilt:
+\begin{gather}\label{eq:72-TR}
+  v(U',\phi')= D(\phi'\circ\phi^{-1})(\phi(x))  v(U,\phi)
+     \tag{TR}
+\end{gather}
+Diese nennen wir $v\colon\CD_{x}\rightarrow\R^{n}$. Also wird
+jeder Karte $(U, \phi)$ gemäß $v(U,\phi)$ ein Vektor $\overline{v}$ des
+$\R^{n}$ zugeordnet. 
+\begin{bemerk}
+  Die Abbildung $v$ ist damit bereits durch ihren Wert für eine einzige Karte
+  bestimmt.
+\end{bemerk}
+
+Nun erhält das $T_{x}M$ die Struktur eines reellen linearen Raumes: Dazu
+müssen wir erklären, was die Linearkombination von zwei $v$ ist:
+\begin{gather*}
+  (v+\lambda w)(U,\phi)\coloneq v(U,\phi)+\lambda w(U,\phi)\qquad v,w\in
+     T_{x}M, \lambda\in\R, (U,\phi)\in\CD_{x}
+\end{gather*}
+Damit ist $T_{x}M$ ein Vektorraum und er ist sogar isomorph zu $\R^{n}$. Dies
+wollen wir im folgenden zeigen.
+
+Dazu definieren wir $\Phi\colon T_{x}M\rightarrow\R^{n}$ durch
+$\Phi(v)\coloneq v(U,\phi)$ für fixierte Karte $(U,\phi)\in\CD_{x}$. Es ist
+$\Phi$ der Isomorphismus. Denn $\Phi$ ist linear: $\Phi(v+\lambda w)=
+(v+\lambda w)(U,\phi)= v(U,\phi)+ \lambda w(U,\phi)= \Phi(v)+ \lambda\Phi(w)$.
+Weiter ist $\Phi$ auch injektiv: Dazu nehmen wir an, dass
+$\Phi(v)=\Phi(w)\Rightarrow v(U,\phi)= w(U,\phi)$. Aus der
+Transformationsregel (\autoref{eq:72-TR}) folgt, $v(U',\phi')=w(U',\phi')$ für
+alle $(U',\phi')\in\CD_{x}$. Also ist auch $v=w$. Zum Schluss ist auch $\Phi$
+surjektiv: Sei $\overline{v}\in\R^{n}$ und  setzen $v\colon
+\CD_{x}\rightarrow\R^{n}$. Nun wählen wir den Ansatz: $v(U',\phi')\coloneq
+D(\phi'\circ\phi^{-1})(\phi(x))\overline{v}$. Damit ist $v\in T_{x}M$ und
+$\Phi(v)=\overline{v}$. Insgesamt ist also $T_{x}M$ isomorph zu $\R^{n}$.
+
+\begin{defini}
+  Es ist $T_{x}M$ mit der obigen Struktur eines $n$"~dimensionalen reellen
+  Vektorraums ein \highl{Tangentialraum} an die Mannigfaltigkeit $M$ im Punkt
+  $x$. Seine Elemente $v$ heißen \highl{Tangentialvektoren} und ihre Bilder
+  $\overline{v}=v(U,\phi)$ \highl{Koordinatenvektoren} dieser
+  Tangentialvektoren bezüglich der Karte $(U,\phi)$ um den Punkt $x$.
+\end{defini}
+
+
+
+
 
 
 
@@ -1969,6 +2177,7 @@ $l\leq k$.
  \bibitem{munkres} \textsc{James Munkres}. Topology. PrenticeHall 1975.
  \bibitem{meyer} \textsc{Karl"=Heinz Meyer}. Algebraische Topologie.
   Birkhäuser 1989.
+ \bibitem{jaenig} \textsc{Jänig}. Vektoranalysis. Springer
 \end{thebibliography}
 
 \clearpage
