Zwei kleine Schreibfehler entfernt und Vornamen von Jaenig ergaenzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1942 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1547,7 +1547,7 @@ $l\leq k$.
   $f(x)=x^{3}$ vor. Diese Abbildung ist bijektiv und in beide Richtungen
   stetig. Es ist $\CA_{M}=(\R,f,\R)$ ein Atlas für $\R$ aus einer Karte und
   $\CA_{N}= (\R,\iota,\R)$ ebenfalls ein Atlas. Die Karten sind \emph{nicht}
-  $C^{\infty}$"~verbunden\footnote{Gilt aber auch für jedes belibige $k$.}.
+  $C^{\infty}$"~verbunden\footnote{Gilt aber auch für jedes beliebige $k$.}.
   Denn es ist $\iota\circ f^{-1}=f^{-1}$ nicht $C^{\infty}$. Damit folgt,
   $\CD(\CA_{M})\neq\CD(\CA_{N})$.
 
@@ -1660,7 +1660,7 @@ Koordinatenvektor $\overline{v}=
   v_{1}\\
   \vdots\\
   v_{n}
-\end{pmatrix}$ von belibigen Tangentialvektoren transformiert sich dann nach
+\end{pmatrix}$ von beliebigen Tangentialvektoren transformiert sich dann nach
 der Regel:
 \begin{gather*}
   v_{i}'= \sum_{j=1}^{n} \frac{\partial u_{j}'}{\partial u_{i}}
@@ -2177,7 +2177,7 @@ $\Phi(v)=\overline{v}$. Insgesamt ist also $T_{x}M$ isomorph zu $\R^{n}$.
  \bibitem{munkres} \textsc{James Munkres}. Topology. PrenticeHall 1975.
  \bibitem{meyer} \textsc{Karl"=Heinz Meyer}. Algebraische Topologie.
   Birkhäuser 1989.
- \bibitem{jaenig} \textsc{Jänig}. Vektoranalysis. Springer
+ \bibitem{jaenig} \textsc{Klaus Jänig}. Vektoranalysis. Springer
 \end{thebibliography}
 
 \clearpage
